# nimble

./: Cargo.toml  README.md
.github/workflows/: continuous-integration.yml
nimble/: Cargo.toml
nimble-derive/: Cargo.toml
nimble-derive/src/: context.rs  decode.rs  encode.rs  lib.rs  util.rs
nimble-derive/src/decode/: decode_from_expr.rs
nimble-derive/src/encode/: encode_to_expr.rs  size_expr.rs
nimble-test/: Cargo.toml
nimble-test/tests/: enum_tests.rs  struct_tests.rs
nimble/examples/: sample.rs
nimble/src/: config.rs  decode.rs  encode.rs  error.rs  io.rs  lib.rs  varint.rs
src/: decode.rs  encode.rs  error.rs  lib.rs
