[package]
name = "nimble"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", optional = true, features = ["io-util"] }
async-std = { version = "1.5", optional = true }

[features]
default = ["tokio"]
doc = []
