[package]
name = "nimble-test"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
nimble = { path = "../nimble", features = ["derive"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
