[package]
name = "nimble-test"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
nimble = { path = "../nimble", features = ["derive"] }
futures-executor = "0.3"
