[package]
name = "nimble"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.5", features = ["array-sizes-33-128"] }
tokio = { version = "0.2", optional = true, features = ["io-util"] }
async-std = { version = "1.5", optional = true }

[dev-dependencies]
rand = "0.7"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }

[features]
default = ["tokio"]
doc = []
