[package]
name = "nimble"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Async friendly, simple and fast binary encoding/decoding"
homepage = "https://github.com/devashishdxt/nimble"
repository = "https://github.com/devashishdxt/nimble"
categories = ["encoding", "network-programming"]
keywords = ["encode", "decode", "serialize", "deserialize", "binary"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
arrayvec = { version = "0.5", features = ["array-sizes-33-128"] }
nimble-derive = { path = "../nimble-derive", optional = true }
tokio = { version = "0.2", optional = true, features = ["io-util"] }
async-std = { version = "1.5", optional = true }

[dev-dependencies]
rand = "0.7"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }

[features]
default = ["tokio"]
derive = ["nimble-derive"]
