[package]
name = "nimble"
version = "0.2.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Async friendly, simple and fast binary encoding/decoding"
homepage = "https://github.com/devashishdxt/nimble"
repository = "https://github.com/devashishdxt/nimble"
categories = ["encoding", "network-programming"]
keywords = ["encode", "decode", "serialize", "deserialize", "binary"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
arrayvec = { version = "0.5", features = ["array-sizes-33-128"] }
futures-util = { version = "0.3", optional = true, features = ["io"] }
nimble-derive = { version = "0.2.0", optional = true }
thiserror = "1.0"
tokio = { version = "0.2", optional = true, features = ["io-util"] }

[dev-dependencies]
rand = "0.7"
futures-executor = "0.3"

[features]
default = ["futures"]
futures = ["futures-util"]
derive = ["nimble-derive"]
